<resources>
    <string name="app_name">CycleSafe</string>
    <string name="title_login">@string/app_name</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_orders">Orders</string>
    <string name="title_order_detailed">Order</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="invalid_username">At least 4 characters</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="invalid_email_used">Already in use</string>
    <string name="invalid_password">At least 6 characters</string>
    <string name="invalid_confirm_password">Must match prior entry</string>

    <string name="no_account">Don\'t have an account?</string>

    <string name="action_register">Create an account</string>
    <string name="action_signup">Create account</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_order">Add order</string>
    <string name="action_save">Save</string>
    <string name="action_delete_order">Delete order</string>
    <string name="action_select_pickup_time">Select</string>

    <string name="welcome">"Welcome %1$s!"</string>
    <string name="invalid_account">Invalid e-mail/password</string>
    <string name="auth_failed">Login/Registration failed</string>

    <string name="setting_is_courier">Courier Mode</string>

    <string name="prompt_logo">Logo</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_comment">Comment</string>
    <string name="prompt_pickup_time">Select pickup time</string>

    <string name="invalid_address">Must not be empty</string>

    <string name="main_logo_desc">Logo of an orange bicycle of a background of other bicycles</string>
</resources>
